Alembic export with multiple hair systems crash blender #49249

Closed
opened 2016-09-04 17:27:39 +02:00 by Miika Puustinen (miikap) · 12 comments

System Information
Windows 10 2x GTX960

Blender Version
Broken: 2.78RC1, 0e5089c

Short description of error
If you export an alembic file from blender with multiple hair systems, it crashes Blender when that alembic is imported. It crashes also other software (tested with Houdini 15.5 NC)

Exact steps for others to reproduce the error

  1. Select the default cube
  2. Create a 2x particle system, change type to hair
  3. Export to alembic
**System Information** Windows 10 2x GTX960 **Blender Version** Broken: 2.78RC1, 0e5089c **Short description of error** If you export an alembic file from blender with multiple hair systems, it crashes Blender when that alembic is imported. It crashes also other software (tested with Houdini 15.5 NC) **Exact steps for others to reproduce the error** 1. Select the default cube 2. Create a 2x particle system, change type to hair 3. Export to alembic
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @MiikaPuustinen

Added subscriber: @MiikaPuustinen

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich
Kévin Dietrich self-assigned this 2016-09-04 17:35:18 +02:00

I can't reproduce the crash, but I can see there is an issue doubled with a memory leak. Will check on it later.

I can't reproduce the crash, but I can see there is an issue doubled with a memory leak. Will check on it later.

This issue was referenced by 2024cd09a0

This issue was referenced by 2024cd09a09afdaac63ca060dc1e0b33eb75fbdc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Added subscriber: @dr.sybren

Added subscriber: @dr.sybren

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Kévin Dietrich was unassigned by Sybren A. Stüvel 2017-02-07 19:21:39 +01:00
Sybren A. Stüvel self-assigned this 2017-02-07 19:21:39 +01:00

Commit 2024cd09a0 seems to have introduced a crash. I tried exporting Rinky , and it fails. A "git bisect" showed that 2024cd09 was responsible. I'll try and investigate & fix this.

...
read blend: /home/sybren/workspace/blender-git/blender/Rinky.blend
/home/sybren/workspace/blender-git/blender/blender-debug(BLI_system_backtrace+0x35) [0x55b463910472]
/home/sybren/workspace/blender-git/blender/blender-debug(CustomData_from_bmeshpoly+0x46) [0x55b463421a79]
/home/sybren/workspace/blender-git/blender/blender-debug(DM_update_tessface_data+0xea) [0x55b463397461]
/home/sybren/workspace/blender-git/blender/blender-debug(_ZN13AbcHairWriter8do_writeEv+0xc8) [0x55b4639d2800]
/home/sybren/workspace/blender-git/blender/blender-debug(_ZN15AbcObjectWriter5writeEv+0x23) [0x55b4639fd407]
/home/sybren/workspace/blender-git/blender/blender-debug(_ZN11AbcExporterclEP4MainRfRb+0x84a) [0x55b4639cb758]
/home/sybren/workspace/blender-git/blender/blender-debug(+0x2bd7250) [0x55b46398f250]
/home/sybren/workspace/blender-git/blender/blender-debug(+0x1a9118f) [0x55b46284918f]
/home/sybren/workspace/blender-git/blender/blender-debug(+0x2b5a61a) [0x55b46391261a]
/lib/x86_64-linux-gnu/libpthread.so.0(+0x76ca) [0x7f80c2fa46ca]
/lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7f80c01ef0af]
BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/customdata.c:2543, CustomData_from_bmeshpoly(), at '!CustomData_from_bmeshpoly_test(fdata, pdata, ldata, 0)'
zsh: abort      blender-debug Rinky.blend
Commit 2024cd09a09afdaac63ca060dc1e0b33eb75fbdc seems to have introduced a crash. I tried exporting [Rinky](https://cloud.blender.org/p/characters/57711c61c379cf02d1a87855) , and it fails. A "git bisect" showed that 2024cd09 was responsible. I'll try and investigate & fix this. ``` ... read blend: /home/sybren/workspace/blender-git/blender/Rinky.blend /home/sybren/workspace/blender-git/blender/blender-debug(BLI_system_backtrace+0x35) [0x55b463910472] /home/sybren/workspace/blender-git/blender/blender-debug(CustomData_from_bmeshpoly+0x46) [0x55b463421a79] /home/sybren/workspace/blender-git/blender/blender-debug(DM_update_tessface_data+0xea) [0x55b463397461] /home/sybren/workspace/blender-git/blender/blender-debug(_ZN13AbcHairWriter8do_writeEv+0xc8) [0x55b4639d2800] /home/sybren/workspace/blender-git/blender/blender-debug(_ZN15AbcObjectWriter5writeEv+0x23) [0x55b4639fd407] /home/sybren/workspace/blender-git/blender/blender-debug(_ZN11AbcExporterclEP4MainRfRb+0x84a) [0x55b4639cb758] /home/sybren/workspace/blender-git/blender/blender-debug(+0x2bd7250) [0x55b46398f250] /home/sybren/workspace/blender-git/blender/blender-debug(+0x1a9118f) [0x55b46284918f] /home/sybren/workspace/blender-git/blender/blender-debug(+0x2b5a61a) [0x55b46391261a] /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ca) [0x7f80c2fa46ca] /lib/x86_64-linux-gnu/libc.so.6(clone+0x5f) [0x7f80c01ef0af] BLI_assert failed: /home/sybren/workspace/blender-git/blender/source/blender/blenkernel/intern/customdata.c:2543, CustomData_from_bmeshpoly(), at '!CustomData_from_bmeshpoly_test(fdata, pdata, ldata, 0)' zsh: abort blender-debug Rinky.blend ```

Ok, that commit isn't the root cause of the crash. Before that commit multiple particle systems would not even be written to the Alembic file due to them using the same name; after the commit they are written, which is crashing for some reason. More investigation tomorrow.

Ok, that commit isn't the root cause of the crash. Before that commit multiple particle systems would not even be written to the Alembic file due to them using the same name; after the commit they are written, which is crashing for some reason. More investigation tomorrow.

This issue was referenced by 8cda364d6f

This issue was referenced by 8cda364d6f2e6e8da454034f19fb959739045813

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#49249
No description provided.